--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "es-toolkit": "^1",
     "framer-motion": "^11",
     "lucide-react": "^0.469.0",
-    "next": "15.1.0",
+    "next": "^16.1.1",
     "next-themes": "^0.4.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7",
     "react-use": "^17",
     "resend": "^6.6.0",
